<resources>
    <string name="app_name">Mashawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="createAccount">Create Account</string>
    <string name="haveAccount">Have an Account?</string>
    <string name="login">Log in</string>
    <string name="notMemberYet">Not a member yet?</string>
    <string name="or">OR</string>
    <string name="loginOrSignup">Log in or Sign up with</string>
    <string name="loginOrcreate">Log in or Create account using email</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="title_upcoming_trips">Upcoming</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="Save">Save</string>
    <string name="TripInformation">Trip Information</string>
    <string name="TripName">Trip Name</string>
    <string name="startPoint">Trip Start Point</string>
    <string name="endPoint">Trip End Point</string>
    <string name="tripDateTime">Trip Time and Date</string>
    <string name="tripTime">Trip Time</string>
    <string name="tripDate">Trip Date</string>
    <string name="tripNotes">Trip Notes</string>
    <string name="addTrip">Add Trip</string>
    <string name="facebook_app_id">801810603535404</string>
    <string name="fb_login_protocol_scheme">fb801810603535404</string>
    <string name="google_maps_key">AIzaSyAquqgDyQnx2jO2Czz7x7a93Pb1MUxzs1o</string>
    <string name="writeNote">Write Note to Add</string>
    <string name="sync_btn">sync</string>
    <string name="logout">Log out</string>
    <string name="TripNotes">Trip Notes</string>
    <string name="twoWay">Two Way</string>
    <string name="noTripsFound">No Trips Found</string>
    <string name="delete">delete</string>
    <string name="emptyNotes">Empty Notes</string>
    <string name="profile">Profile</string>
    <string name="signup">Sign Up</string>
    <string name="from">From:</string>
    <string name="to">To:</string>

</resources>
