<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/main_login_background"
    tools:context=".screens.loginscreen.fragments.MainLoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            tools:src="@tools:sample/avatars[12]" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/loginOrSignup"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/gradient_end"
            android:drawableStart="@drawable/ic_google"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:background="@drawable/login_button_state"
            android:text="@string/common_signin_button_text_long" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btnMainLoginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button_state"
            android:text="@string/login"
            android:textColor="@color/gradient_end" />

        <Button
            android:id="@+id/btnSignupMainPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/signup_button_state"
            android:text="@string/signup"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>